src/objects/Goal_Hierarchy1__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Owner_Override__c</fullName>
        <formula>IF(Is_Assigned_To_Override_Active__c = &quot;ACTIVE&quot; , Assigned_To_Override__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Owner Override</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Owner__c</fullName>
        <description>S328245 - This formula is designed to fetch the Owner of the NI Agency - based on the business formula</description>
        <formula>if(Agency_Owner_Override__c != &quot;&quot;, Agency_Owner_Override__c ,
IF(Is_Assigned_To_Active__c = &quot;ACTIVE&quot; , 
	Assigned_To__c
	,
        IF(Parent_Admin__c &lt;&gt; null,  
   
		IF(Parent_Admin__r.Is_Assigned_To_Active__c = &quot;ACTIVE&quot;, 
			Parent_Admin__r.Assigned_To__c,
     
			IF(Parent_Admin__r.Parent_Admin__c &lt;&gt; null,
       
				IF(Parent_Admin__r.Parent_Admin__r.Is_Assigned_To_Active__c = &quot;ACTIVE&quot;, 
					Parent_Admin__r.Parent_Admin__r.Assigned_To__c
					, 
	 				&quot;&quot;
	 			)
				, 
       				&quot;&quot;
			)
     			
		)
		,
		&quot;&quot;
	)
))</formula>
        <label>Agency Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To (Override)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goal_Hierarchies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goal_Hierarchies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CL_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will hold the information for the CL only</description>
        <label>CL Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Std. Director</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Goal_Hierarchy1__c.Hierarchy_Level__c</field>
                <operation>equals</operation>
                <value>Director</value>
            </filterItems>
            <filterItems>
                <field>Goal_Hierarchy1__c.CL_Only__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Goal_Hierarchy1__c</referenceTo>
        <relationshipName>Goal_Hierarchies4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_Hierarchy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Goal Hierarchy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <picklist>
            <picklistValues>
                <fullName>AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Assigned_To_Active__c</fullName>
        <formula>if(Assigned_To__r.IsActive,&quot;ACTIVE&quot;,&quot;INACTIVE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Assigned_To_Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Assigned_To_Override_Active__c</fullName>
        <formula>if(Assigned_To_Override__r.IsActive,&quot;ACTIVE&quot;,&quot;INACTIVE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Assigned_To_Override_Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>UserId__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Code__c</fullName>
        <label>Org Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Admin_CL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will hold the information for the CL only goals</description>
        <label>Parent Admin (CL)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Goal_Hierarchy1__c.CL_Only__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Goal_Hierarchy1__c</referenceTo>
        <relationshipName>Goal_Hierarchies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Admin</label>
        <referenceTo>Goal_Hierarchy1__c</referenceTo>
        <relationshipName>Goal_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Geo_CL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Geo (CL)</label>
        <referenceTo>Goal_Hierarchy1__c</referenceTo>
        <relationshipName>Goal_Hierarchies3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Geo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Geo</label>
        <referenceTo>Goal_Hierarchy1__c</referenceTo>
        <relationshipName>Goal_Hierarchies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Unique_Admin_CL__c</fullName>
        <formula>Parent_Admin_CL__r.Unique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Unique (Admin CL)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Unique_Admin__c</fullName>
        <formula>Parent_Admin__r.Unique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Unique (Admin)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Unique_Geo_CL__c</fullName>
        <formula>Parent_Geo_CL__r.Unique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Unique (Geo CL)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Unique_Geo__c</fullName>
        <formula>Parent_Geo__r.Unique__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Unique (Geo)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <label>Region Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Org_Code__c</fullName>
        <label>State Org Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Org_Description__c</fullName>
        <label>State Org Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goal_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_Cancelled_SM_Combo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Cancelled SM Combo</label>
        <type>Checkbox</type>
    </fields>
    <label>Goal Hierarchy1</label>
    <nameField>
        <label>Goal Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Hierarchies</pluralLabel>
    <recordTypes>
        <fullName>CL_Sales_Manager</fullName>
        <active>true</active>
        <description>CL Sales Manager</description>
        <label>CL Sales Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>CL_Sales_Manager_allocation_to_Territory</fullName>
        <active>true</active>
        <description>CL Sales Manager allocation to Territory</description>
        <label>CL Sales Manager allocation to Territory</label>
    </recordTypes>
    <recordTypes>
        <fullName>CL_Territory</fullName>
        <active>true</active>
        <description>CL Territory</description>
        <label>CL Territory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>